--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
-aiohttp==3.6.3
-astroid==2.4.2
+aiohttp==3.7.4.post0
+astroid==2.11.5
 async-timeout==3.0.1
-attrs==20.3.0
-cffi==1.14.4
-chardet==3.0.4
-colorama==0.4.4
-discord.py==1.5.1
-idna==3.0
-isort==5.7.0
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-multidict==4.7.6
-pycparser==2.20
-pylint==2.6.0
-PyNaCl==1.4.0
-python-dotenv==0.15.0
-six==1.15.0
-toml==0.10.2
-wrapt==1.12.1
-yarl==1.5.1
+attrs==21.4.0
+chardet==4.0.0
+dill==0.3.5.1
+discord.py==1.7.3
+idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+multidict==6.0.2
+platformdirs==2.5.2
+pylint==2.14.1
+python-dotenv==0.20.0
+tomli==2.0.1
+tomlkit==0.11.0
+typing_extensions==4.2.0
+wrapt==1.14.1
+yarl==1.7.2
